hmap_backend/k8s/prod/03-app/02-service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: hmap-prod-backend-api
  name: hmap-prod-backend-api
  namespace: hmap-prod
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: hmap-prod-backend-api
