hmap_backend/k8s/prod/03-app/03-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hmap-prod-backend-api
  namespace: hmap-prod
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: api.hmap.forodeincendiosforestales.org
    kubernetes.io/tls-acme: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"

spec:
  rules:
    - host: api.hmap.forodeincendiosforestales.org
      http:
        paths:
          - backend:
              serviceName: hmap-prod-backend-api
              servicePort: 80
            path: /

  tls:
    - hosts:
        - api.hmap.forodeincendiosforestales.org
      secretName: api-hmap-tls
